--- a/src/assets/styles/home.scss
+++ b/src/assets/styles/home.scss
@@ -1,5 +1,14 @@
 @import "./mixins.scss";
 
+$color-green: rgb(59, 201, 22);
+$color-pink: rgb(255, 102, 159);
+$color-blue: rgb(74, 171, 255);
+$color-yellow: rgb(255, 198, 102);
+$color-green-transparent: rgba(59, 201, 22, .5);
+$color-pink-transparent: rgba(255, 102, 159, .5);
+$color-blue-transparent: rgba(74, 171, 255, .5);
+$color-yellow-transparent: rgba(255, 198, 102, .5);
+
 $text-large: px2rem(18);
 $text-big: px2rem(16);
 $text-medium: px2rem(14);
